cpp/tiger.output
Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: INT
    3    | lvalue
    4    | NIL
    5    | STRING
    6    | BREAK
    7    | LPAREN expression_sequence RPAREN
    8    | function_call
    9    | arithmetic_exp
   10    | negation_exp
   11    | comparison_exp
   12    | boolean_exp
   13    | record_creation
   14    | array_creation
   15    | assignment_exp
   16    | if_statement
   17    | while_loop
   18    | for_loop
   19    | let_statement

   20 expression_sequence: ε
   21                    | exp exp_seq_tail

   22 exp_seq_tail: ε
   23             | SEMICOLON exp exp_seq_tail

   24 function_call: ID LPAREN function_args RPAREN

   25 function_args: ε
   26              | exp function_args_tail

   27 function_args_tail: ε
   28                   | COMMA exp function_args_tail

   29 arithmetic_exp: exp PLUS exp
   30               | exp MINUS exp
   31               | exp TIMES exp
   32               | exp DIVIDE exp

   33 negation_exp: MINUS exp

   34 comparison_exp: exp EQ exp
   35               | exp NEQ exp
   36               | exp GT exp
   37               | exp GE exp
   38               | exp LT exp
   39               | exp LE exp

   40 boolean_exp: exp AND exp
   41            | exp OR exp

   42 record_creation: ID LBRACE record_list RBRACE

   43 record_list: ID EQ exp record_list_extension

   44 record_list_extension: ε
   45                      | COMMA ID EQ exp record_list_extension

   46 array_creation: ID LBRACK exp RBRACK OF exp

   47 assignment_exp: lvalue ASSIGN exp

   48 if_statement: IF exp THEN exp ELSE exp
   49             | IF exp THEN exp

   50 while_loop: WHILE exp DO exp

   51 for_loop: FOR ID ASSIGN exp TO exp DO exp

   52 let_statement: LET declaration_sequence IN expression_sequence END

   53 declaration_sequence: ε
   54                     | declaration declaration_sequence

   55 declaration: type_declaration
   56            | variable_declaration
   57            | function_declaration

   58 type_declaration: TYPE ID EQ type

   59 type: ID
   60     | LBRACE type_fields RBRACE
   61     | ARRAY OF ID

   62 type_fields: ε
   63            | ID COLON ID type_fields_extension

   64 type_fields_extension: ε
   65                      | COMMA ID COLON ID type_fields_extension

   66 variable_declaration: VAR ID ASSIGN exp
   67                     | VAR ID COLON ID ASSIGN exp

   68 function_declaration: FUNCTION ID LPAREN type_fields RPAREN EQ exp
   69                     | FUNCTION ID LPAREN type_fields RPAREN COLON ID EQ exp

   70 lvalue: ID
   71       | ID field_extension
   72       | ID subscript_extension

   73 field_extension: DOT ID
   74                | DOT ID field_extension
   75                | DOT ID subscript_extension

   76 subscript_extension: LBRACK exp RBRACK
   77                    | LBRACK exp RBRACK field_extension
   78                    | LBRACK exp RBRACK subscript_extension


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <std::string> (258) 24 42 43 45 46 51 58 59 61 63 65 66 67 68 69 70 71 72 73 74 75
    STRING <std::string> (259) 5
    INT <int> (260) 2
    COMMA (261) 28 45 65
    COLON (262) 63 65 67 69
    SEMICOLON (263) 23
    LPAREN (264) 7 24 68 69
    RPAREN (265) 7 24 68 69
    LBRACK (266) 46 76 77 78
    RBRACK (267) 46 76 77 78
    LBRACE (268) 42 60
    RBRACE (269) 42 60
    DOT (270) 73 74 75
    PLUS (271) 29
    MINUS (272) 30 33
    TIMES (273) 31
    DIVIDE (274) 32
    EQ (275) 34 43 45 58 68 69
    NEQ (276) 35
    LT (277) 38
    LE (278) 39
    GT (279) 36
    GE (280) 37
    AND (281) 40
    OR (282) 41
    ASSIGN (283) 47 51 66 67
    ARRAY (284) 61
    IF (285) 48 49
    THEN (286) 48 49
    ELSE (287) 48
    WHILE (288) 50
    FOR (289) 51
    TO (290) 51
    DO (291) 50 51
    LET (292) 52
    IN (293) 52
    END (294) 52
    OF (295) 46 61
    BREAK (296) 6
    NIL (297) 4
    FUNCTION (298) 68 69
    VAR (299) 66 67
    TYPE (300) 58
    UMINUS (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program (48)
        on left: 1
        on right: 0
    exp <AST::ExpressionPtr> (49)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 1 21 23 26 28 29 30 31 32 33 34 35 36 37 38 39 40 41 43 45 46 47 48 49 50 51 66 67 68 69 76 77 78
    expression_sequence (50)
        on left: 20 21
        on right: 7 52
    exp_seq_tail (51)
        on left: 22 23
        on right: 21 23
    function_call (52)
        on left: 24
        on right: 8
    function_args (53)
        on left: 25 26
        on right: 24
    function_args_tail (54)
        on left: 27 28
        on right: 26 28
    arithmetic_exp (55)
        on left: 29 30 31 32
        on right: 9
    negation_exp (56)
        on left: 33
        on right: 10
    comparison_exp (57)
        on left: 34 35 36 37 38 39
        on right: 11
    boolean_exp (58)
        on left: 40 41
        on right: 12
    record_creation (59)
        on left: 42
        on right: 13
    record_list (60)
        on left: 43
        on right: 42
    record_list_extension (61)
        on left: 44 45
        on right: 43 45
    array_creation (62)
        on left: 46
        on right: 14
    assignment_exp (63)
        on left: 47
        on right: 15
    if_statement (64)
        on left: 48 49
        on right: 16
    while_loop (65)
        on left: 50
        on right: 17
    for_loop (66)
        on left: 51
        on right: 18
    let_statement (67)
        on left: 52
        on right: 19
    declaration_sequence (68)
        on left: 53 54
        on right: 52 54
    declaration (69)
        on left: 55 56 57
        on right: 54
    type_declaration (70)
        on left: 58
        on right: 55
    type (71)
        on left: 59 60 61
        on right: 58
    type_fields (72)
        on left: 62 63
        on right: 60 68 69
    type_fields_extension (73)
        on left: 64 65
        on right: 63 65
    variable_declaration (74)
        on left: 66 67
        on right: 56
    function_declaration (75)
        on left: 68 69
        on right: 57
    lvalue <AST::VariablePtr> (76)
        on left: 70 71 72
        on right: 3 47
    field_extension <AST::FieldVariablePtr> (77)
        on left: 73 74 75
        on right: 71 74 77
    subscript_extension <AST::SubscriptVariablePtr> (78)
        on left: 76 77 78
        on right: 72 75 78


State 0

    0 $accept: • program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program          go to state 12
    exp              go to state 13
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 1

   24 function_call: ID • LPAREN function_args RPAREN
   42 record_creation: ID • LBRACE record_list RBRACE
   46 array_creation: ID • LBRACK exp RBRACK OF exp
   70 lvalue: ID •
   71       | ID • field_extension
   72       | ID • subscript_extension

    LPAREN  shift, and go to state 27
    LBRACK  shift, and go to state 28
    LBRACE  shift, and go to state 29
    DOT     shift, and go to state 30

    $default  reduce using rule 70 (lvalue)

    field_extension      go to state 31
    subscript_extension  go to state 32


State 2

    5 exp: STRING •

    $default  reduce using rule 5 (exp)


State 3

    2 exp: INT •

    $default  reduce using rule 2 (exp)


State 4

    7 exp: LPAREN • expression_sequence RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 20 (expression_sequence)

    exp                  go to state 33
    expression_sequence  go to state 34
    function_call        go to state 14
    arithmetic_exp       go to state 15
    negation_exp         go to state 16
    comparison_exp       go to state 17
    boolean_exp          go to state 18
    record_creation      go to state 19
    array_creation       go to state 20
    assignment_exp       go to state 21
    if_statement         go to state 22
    while_loop           go to state 23
    for_loop             go to state 24
    let_statement        go to state 25
    lvalue               go to state 26


State 5

   33 negation_exp: MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 35
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 6

   48 if_statement: IF • exp THEN exp ELSE exp
   49             | IF • exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 36
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 7

   50 while_loop: WHILE • exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 37
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 8

   51 for_loop: FOR • ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 38


State 9

   52 let_statement: LET • declaration_sequence IN expression_sequence END

    FUNCTION  shift, and go to state 39
    VAR       shift, and go to state 40
    TYPE      shift, and go to state 41

    $default  reduce using rule 53 (declaration_sequence)

    declaration_sequence  go to state 42
    declaration           go to state 43
    type_declaration      go to state 44
    variable_declaration  go to state 45
    function_declaration  go to state 46


State 10

    6 exp: BREAK •

    $default  reduce using rule 6 (exp)


State 11

    4 exp: NIL •

    $default  reduce using rule 4 (exp)


State 12

    0 $accept: program • $end

    $end  shift, and go to state 47


State 13

    1 program: exp •
   29 arithmetic_exp: exp • PLUS exp
   30               | exp • MINUS exp
   31               | exp • TIMES exp
   32               | exp • DIVIDE exp
   34 comparison_exp: exp • EQ exp
   35               | exp • NEQ exp
   36               | exp • GT exp
   37               | exp • GE exp
   38               | exp • LT exp
   39               | exp • LE exp
   40 boolean_exp: exp • AND exp
   41            | exp • OR exp

    PLUS    shift, and go to state 48
    MINUS   shift, and go to state 49
    TIMES   shift, and go to state 50
    DIVIDE  shift, and go to state 51
    EQ      shift, and go to state 52
    NEQ     shift, and go to state 53
    LT      shift, and go to state 54
    LE      shift, and go to state 55
    GT      shift, and go to state 56
    GE      shift, and go to state 57
    AND     shift, and go to state 58
    OR      shift, and go to state 59

    $default  reduce using rule 1 (program)


State 14

    8 exp: function_call •

    $default  reduce using rule 8 (exp)


State 15

    9 exp: arithmetic_exp •

    $default  reduce using rule 9 (exp)


State 16

   10 exp: negation_exp •

    $default  reduce using rule 10 (exp)


State 17

   11 exp: comparison_exp •

    $default  reduce using rule 11 (exp)


State 18

   12 exp: boolean_exp •

    $default  reduce using rule 12 (exp)


State 19

   13 exp: record_creation •

    $default  reduce using rule 13 (exp)


State 20

   14 exp: array_creation •

    $default  reduce using rule 14 (exp)


State 21

   15 exp: assignment_exp •

    $default  reduce using rule 15 (exp)


State 22

   16 exp: if_statement •

    $default  reduce using rule 16 (exp)


State 23

   17 exp: while_loop •

    $default  reduce using rule 17 (exp)


State 24

   18 exp: for_loop •

    $default  reduce using rule 18 (exp)


State 25

   19 exp: let_statement •

    $default  reduce using rule 19 (exp)


State 26

    3 exp: lvalue •
   47 assignment_exp: lvalue • ASSIGN exp

    ASSIGN  shift, and go to state 60

    $default  reduce using rule 3 (exp)


State 27

   24 function_call: ID LPAREN • function_args RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 25 (function_args)

    exp              go to state 61
    function_call    go to state 14
    function_args    go to state 62
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 28

   46 array_creation: ID LBRACK • exp RBRACK OF exp
   76 subscript_extension: LBRACK • exp RBRACK
   77                    | LBRACK • exp RBRACK field_extension
   78                    | LBRACK • exp RBRACK subscript_extension

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 63
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 29

   42 record_creation: ID LBRACE • record_list RBRACE

    ID  shift, and go to state 64

    record_list  go to state 65


State 30

   73 field_extension: DOT • ID
   74                | DOT • ID field_extension
   75                | DOT • ID subscript_extension

    ID  shift, and go to state 66


State 31

   71 lvalue: ID field_extension •

    $default  reduce using rule 71 (lvalue)


State 32

   72 lvalue: ID subscript_extension •

    $default  reduce using rule 72 (lvalue)


State 33

   21 expression_sequence: exp • exp_seq_tail
   29 arithmetic_exp: exp • PLUS exp
   30               | exp • MINUS exp
   31               | exp • TIMES exp
   32               | exp • DIVIDE exp
   34 comparison_exp: exp • EQ exp
   35               | exp • NEQ exp
   36               | exp • GT exp
   37               | exp • GE exp
   38               | exp • LT exp
   39               | exp • LE exp
   40 boolean_exp: exp • AND exp
   41            | exp • OR exp

    SEMICOLON  shift, and go to state 67
    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    TIMES      shift, and go to state 50
    DIVIDE     shift, and go to state 51
    EQ         shift, and go to state 52
    NEQ        shift, and go to state 53
    LT         shift, and go to state 54
    LE         shift, and go to state 55
    GT         shift, and go to state 56
    GE         shift, and go to state 57
    AND        shift, and go to state 58
    OR         shift, and go to state 59

    $default  reduce using rule 22 (exp_seq_tail)

    exp_seq_tail  go to state 68


State 34

    7 exp: LPAREN expression_sequence • RPAREN

    RPAREN  shift, and go to state 69


State 35

   29 arithmetic_exp: exp • PLUS exp
   30               | exp • MINUS exp
   31               | exp • TIMES exp
   32               | exp • DIVIDE exp
   33 negation_exp: MINUS exp •
   34 comparison_exp: exp • EQ exp
   35               | exp • NEQ exp
   36               | exp • GT exp
   37               | exp • GE exp
   38               | exp • LT exp
   39               | exp • LE exp
   40 boolean_exp: exp • AND exp
   41            | exp • OR exp

    $default  reduce using rule 33 (negation_exp)


State 36

   29 arithmetic_exp: exp • PLUS exp
   30               | exp • MINUS exp
   31               | exp • TIMES exp
   32               | exp • DIVIDE exp
   34 comparison_exp: exp • EQ exp
   35               | exp • NEQ exp
   36               | exp • GT exp
   37               | exp • GE exp
   38               | exp • LT exp
   39               | exp • LE exp
   40 boolean_exp: exp • AND exp
   41            | exp • OR exp
   48 if_statement: IF exp • THEN exp ELSE exp
   49             | IF exp • THEN exp

    PLUS    shift, and go to state 48
    MINUS   shift, and go to state 49
    TIMES   shift, and go to state 50
    DIVIDE  shift, and go to state 51
    EQ      shift, and go to state 52
    NEQ     shift, and go to state 53
    LT      shift, and go to state 54
    LE      shift, and go to state 55
    GT      shift, and go to state 56
    GE      shift, and go to state 57
    AND     shift, and go to state 58
    OR      shift, and go to state 59
    THEN    shift, and go to state 70


State 37

   29 arithmetic_exp: exp • PLUS exp
   30               | exp • MINUS exp
   31               | exp • TIMES exp
   32               | exp • DIVIDE exp
   34 comparison_exp: exp • EQ exp
   35               | exp • NEQ exp
   36               | exp • GT exp
   37               | exp • GE exp
   38               | exp • LT exp
   39               | exp • LE exp
   40 boolean_exp: exp • AND exp
   41            | exp • OR exp
   50 while_loop: WHILE exp • DO exp

    PLUS    shift, and go to state 48
    MINUS   shift, and go to state 49
    TIMES   shift, and go to state 50
    DIVIDE  shift, and go to state 51
    EQ      shift, and go to state 52
    NEQ     shift, and go to state 53
    LT      shift, and go to state 54
    LE      shift, and go to state 55
    GT      shift, and go to state 56
    GE      shift, and go to state 57
    AND     shift, and go to state 58
    OR      shift, and go to state 59
    DO      shift, and go to state 71


State 38

   51 for_loop: FOR ID • ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 72


State 39

   68 function_declaration: FUNCTION • ID LPAREN type_fields RPAREN EQ exp
   69                     | FUNCTION • ID LPAREN type_fields RPAREN COLON ID EQ exp

    ID  shift, and go to state 73


State 40

   66 variable_declaration: VAR • ID ASSIGN exp
   67                     | VAR • ID COLON ID ASSIGN exp

    ID  shift, and go to state 74


State 41

   58 type_declaration: TYPE • ID EQ type

    ID  shift, and go to state 75


State 42

   52 let_statement: LET declaration_sequence • IN expression_sequence END

    IN  shift, and go to state 76


State 43

   54 declaration_sequence: declaration • declaration_sequence

    FUNCTION  shift, and go to state 39
    VAR       shift, and go to state 40
    TYPE      shift, and go to state 41

    $default  reduce using rule 53 (declaration_sequence)

    declaration_sequence  go to state 77
    declaration           go to state 43
    type_declaration      go to state 44
    variable_declaration  go to state 45
    function_declaration  go to state 46


State 44

   55 declaration: type_declaration •

    $default  reduce using rule 55 (declaration)


State 45

   56 declaration: variable_declaration •

    $default  reduce using rule 56 (declaration)


State 46

   57 declaration: function_declaration •

    $default  reduce using rule 57 (declaration)


State 47

    0 $accept: program $end •

    $default  accept


State 48

   29 arithmetic_exp: exp PLUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 78
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 49

   30 arithmetic_exp: exp MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 79
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 50

   31 arithmetic_exp: exp TIMES • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 80
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 51

   32 arithmetic_exp: exp DIVIDE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 81
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 52

   34 comparison_exp: exp EQ • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 82
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 53

   35 comparison_exp: exp NEQ • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 83
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 54

   38 comparison_exp: exp LT • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 84
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 55

   39 comparison_exp: exp LE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 85
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 56

   36 comparison_exp: exp GT • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 86
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 57

   37 comparison_exp: exp GE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 87
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 58

   40 boolean_exp: exp AND • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 88
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 59

   41 boolean_exp: exp OR • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 89
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 60

   47 assignment_exp: lvalue ASSIGN • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp              go to state 90
    function_call    go to state 14
    arithmetic_exp   go to state 15
    negation_exp     go to state 16
    comparison_exp   go to state 17
    boolean_exp      go to state 18
    record_creation  go to state 19
    array_creation   go to state 20
    assignment_exp   go to state 21
    if_statement     go to state 22
    while_loop       go to state 23
    for_loop         go to state 24
    let_statement    go to state 25
    lvalue           go to state 26


State 61

   26 function_args: exp • function_args_tail
   29 arithmetic_exp: exp • PLUS exp
   30               | exp • MINUS exp
   31               | exp • TIMES exp
   32               | exp • DIVIDE exp
   34 comparison_exp: exp • EQ exp
   35               | exp • NEQ exp
   36               | exp • GT exp
   37               | exp • GE exp
   38               | exp • LT exp
   39               | exp • LE exp
   40 boolean_exp: exp • AND exp
   41            | exp • OR exp

    COMMA   shift, and go to state 91
    PLUS    shift, and go to state 48
    MINUS   shift, and go to state 49
    TIMES   shift, and go to state 50
    DIVIDE  shift, and go to state 51
    EQ      shift, and go to state 52
    NEQ     shift, and go to state 53
    LT      shift, and go to state 54
    LE      shift, and go to state 55
    GT      shift, and go to state 56
    GE      shift, and go to state 57
    AND     shift, and go to state 58
    OR      shift, and go to state 59

    $default  reduce using rule 27 (function_args_tail)

    function_args_tail  go to state 92


State 62

   24 function_call: ID LPAREN function_args • RPAREN

    RPAREN  shift, and go to state 93


State 63
